2010-06-17  Darin Fisher  <darin@chromium.org>

Reviewed by Brady Eidson.

        If Page::goToItem is passed a HistoryItem that is the current item,
        then the page should be loaded again.

        https://bugs.webkit.org/show_bug.cgi?id=40660

        * loader/HistoryController.cpp:
        (WebCore::HistoryController::recursiveGoToItem): Add a check to
        recursiveGoToItem that matches the one in FrameLoader::loadItem.



Canonical link: https://commits.webkit.org/52345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61335 268f45cc-cd09-0410-ab3c-d52691b4dbfc